--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,5 @@ NEXT_PUBLIC_ADMIN_EMAIL=vivekkalal4690@gmail.com
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dvsla3ps7
 NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=shofy23
 NEXT_PUBLIC_CLOUDINARY_API_KEY=412218224614827
+
+REVALIDATE_SECONDS=600
