--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,7 @@
-NEXT_PUBLIC_API_BASE_URL=https://v2backend.up.railway.app/api
+NEXT_PUBLIC_API_BASE_URL=http://localhost:7000/api
+#global
+#NEXT_PUBLIC_API_BASE_URL=
+
 NEXT_PUBLIC_API_KEY=rajeshsir
 NEXT_PUBLIC_ADMIN_EMAIL=vivekkalal4690@gmail.com
 
