--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_BASE_URL=http://localhost:7000/api
+NEXT_PUBLIC_API_BASE_URL=http://localhost:7000/shopy
 #global
 #NEXT_PUBLIC_API_BASE_URL=
 
