--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "jsx": "react",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@assets/*": ["./public/assets/*"],
+      "@/*": ["src/*"],
+      "@assets/*": ["public/assets/*"]
     }
   }
 }
