--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "plugins": [{ "name": "next" }],
+
+    // 👇 add these two
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
