--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,38 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "ES2022",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
     "noEmit": true,
     "incremental": true,
+
     "module": "esnext",
+    "moduleResolution": "bundler",        // ✅ modern resolver (preferred for Next 13/14/15)
     "esModuleInterop": true,
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+
     "plugins": [{ "name": "next" }],
 
-    // 👇 add these two
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
       "@assets/*": ["public/assets/*"]
-    }
+    },
+
+    // Optional: silence the deprecation warning in TypeScript 5.x
+    "ignoreDeprecations": "6.0"
   },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx"
+  ],
   "exclude": ["node_modules"]
 }
