--- a/package.json
+++ b/package.json
@@ -61,23 +61,20 @@
     "swiper": "^11.2.8",
     "yup": "^1.6.1"
   },
+ 
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^7.0.2",
-    "@next/bundle-analyzer": "^15.3.5",
-    "@types/node": "^24.0.14",
-    "@types/styled-components": "^4.4.3",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "autoprefixer": "^10.4.21",
-    "critters-webpack-plugin": "^3.0.2",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.0.3",
-    "eslint-config-prettier": "^10.1.5",
-    "postcss": "^8.5.6",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^10.2.4",
-    "prettier": "^3.6.0",
-    "tailwindcss": "^4.1.10",
-    "typescript": "^5.8.3"
-  }
+  "@next/bundle-analyzer": "15.3.5",
+  "@types/node": "20.14.10",
+  "@typescript-eslint/eslint-plugin": "6.21.0",
+  "@typescript-eslint/parser": "6.21.0",
+  "autoprefixer": "10.4.20",
+  "eslint": "8.57.0",
+  "eslint-config-next": "15.3.5",
+  "eslint-config-prettier": "9.1.0",
+  "postcss": "8.4.38",
+  "prettier": "3.2.5",
+  "tailwindcss": "4.1.10",
+  "typescript": "5.6.3"
+}
+
 }
