--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": ".",
-    "paths": { "@/*": ["./src/*"] },
+    "paths": {
+      "@/*": ["./src/*"],
+      "@assets/*": ["./src/assets/*"]
+    },
 
     // EITHER keep this as a string:
     "ignoreDeprecations": "5.0"
