--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@assets/*": ["./public/assets/*"]  
+      "@assets/*": ["./src/assets/*"]
     },
 
     // EITHER keep this as a string:
