--- a/package.json
+++ b/package.json
@@ -61,20 +61,19 @@
     "swiper": "^11.2.8",
     "yup": "^1.6.1"
   },
- 
   "devDependencies": {
-  "@next/bundle-analyzer": "15.3.5",
-  "@types/node": "20.14.10",
-  "@typescript-eslint/eslint-plugin": "6.21.0",
-  "@typescript-eslint/parser": "6.21.0",
-  "autoprefixer": "10.4.20",
-  "eslint": "8.57.0",
-  "eslint-config-next": "15.3.5",
-  "eslint-config-prettier": "9.1.0",
-  "postcss": "8.4.38",
-  "prettier": "3.2.5",
-  "tailwindcss": "4.1.10",
-  "typescript": "5.6.3"
-}
-
+    "@next/bundle-analyzer": "15.3.5",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/node": "20.14.10",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "autoprefixer": "10.4.20",
+    "eslint": "8.57.0",
+    "eslint-config-next": "15.3.5",
+    "eslint-config-prettier": "9.1.0",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
+    "tailwindcss": "4.1.10",
+    "typescript": "5.6.3"
+  }
 }
