--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "react-to-print": "^2.14.15",
     "react-toastify": "^11.0.5",
     "react-use": "^17.4.0",
-    "sass": "^1.69.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1",
     "swiper": "^11.2.8",
@@ -67,12 +66,13 @@
     "@types/node": "20.14.10",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
-    "autoprefixer": "10.4.20",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "15.3.5",
     "eslint-config-prettier": "9.1.0",
-    "postcss": "8.4.38",
+    "postcss": "^8.4.38",
     "prettier": "3.2.5",
+    "sass": "^1.92.1",
     "tailwindcss": "4.1.10",
     "typescript": "5.6.3"
   }
